<resources>
    <string name="app_name">ChatApp</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="registration">Регистрация</string>
    <string name="put_name">Введите имя пользователя</string>
    <string name="put_email">Введите email</string>
    <string name="put_password">Введите пароль</string>
    <string name="confirmPassword">Повторите пароль</string>
    <string name="button_reg">Зарегистрироваться</string>
    <string name="button_login">Войти</string>
    <string name="login">Вход</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
</resources>