<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_back"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />


    <TextView
        android:id="@+id/view_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textColor="@color/blue_main"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@id/liner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <LinearLayout
        android:id="@+id/liner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_back"
        app:layout_constraintVertical_bias="0.3">

        <TextView
            android:id="@+id/view_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/put_name"
            android:textColor="@color/blue"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="30dp"
            android:background="@drawable/edittext_auth_reg"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/main" />

        <TextView
            android:id="@+id/view_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/put_email"
            android:textColor="@color/blue"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:background="@drawable/edittext_auth_reg"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/main" />

        <TextView
            android:id="@+id/view_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/put_password"
            android:textColor="@color/blue"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:background="@drawable/edittext_auth_reg"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/main" />

        <TextView
            android:id="@+id/view_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmPassword"
            android:textColor="@color/blue"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edit_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:background="@drawable/edittext_auth_reg"
            android:ems="10"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:onClick="registration"
            android:text="@string/button_reg"
            android:textColor="@color/back" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>