<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main">



    <LinearLayout
        android:id="@+id/liner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/view_username_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="30dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginVertical="48dp"
            android:layout_gravity="center"
            android:shadowColor="@color/pink"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="5"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_window_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:background="@drawable/button_main_window"
            android:onClick="onClick"
            android:text="@string/button_login"
            android:textColor="@color/pink" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_window_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_main_window"
            android:onClick="onClickReg"
            android:text="@string/button_reg"
            android:textColor="@color/pink" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>